--- a/BIOLOGIA Unidad I.teoria 1.html
+++ b/BIOLOGIA Unidad I.teoria 1.html
@@ -3,11 +3,107 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sociologia</title>
+    <title>Biología</title>
     <link rel="stylesheet" href="css/foundation.css" />
     <script src="js/vendor/modernizr.js"></script>
   </head>
-  <body>   
+  <body>
+<div class="row">
+        <div class="small-12 medium-12 large-12 columns">
+           <p class="text-justify">Unidad I. CIENCIA DE LA VIDA </p>
+       <p class="text-justify"><h5>1.1Biología como ciencia y su relación con otras disciplinas</h5></p>
+	   </div>
+	    </div>
+
+		<div class="row"> 
+	  <div class="small-6 medium-6 large-6 columns"> 
+	      <p class="text-justify"> Aquí en prepa en línea de Lea podrás comprender por medio de la biología la conexión de la vida y su campo de estudio, revisando tu entorno personal con un enfoque científico donde podrás usas los bioelementos con que se compone la materia orgánica. Antes de todo esto debes saber algunos conceptos base sobre otras ciencias de las cuales la biología tiene apoyo para el estudio de su gran campo. Por lo tanto se entenderá a la biología con otras disciplinas.</p>
+      </div> 
+	<div class="small-6 medium-6 large-6 columns">  
+	 <img src="http://leavirtual.com.mx/actividades/archivos/img/imagen1 unidas1.jpg" width="300">
+    </div>  
+       </div> 
+	   
+   <div class="row">
+        <div class="small-12 medium-12 large-12 columns">
+           <p class="text-justify"><h5>1.1.1Física</h5></p>
+		   <p class="text-justify"> La física permite conocer los sistemas biológicos a nivel molecular o atómico. En esto ayudó mucho la invención del microscopio.
+           La física aporta un enfoque cuantitativo que permite identificar patrones. La biología aplica leyes físicas naturales, puesto que todo está compuesto de átomos.
+           Por ejemplo, la física permite explicar cómo es que los murciélagos se valen de las ondas sonoras para moverse en la oscuridad, o cómo funciona el movimiento de las extremidades de los diferentes animales.</p>
+        </div>
+   </div>
+   
+   <div class="row">
+       <div class="small-6 medium-6 large-6 columns">
+       <img src="http://leavirtual.com.mx/actividades/archivos/img/imagen 2.jpg">
+       </div>
+	   <div class="small-6 medium-6 large-6 columns">
+	    <div class="row" style="margin-top: 2em;"></div><!--espacio-->
+          <p class="text-justify"> También fueron descubrimientos de la física los que permitieron entender que hay flores que arreglan sus semillas o pétalos siguiendo una serie de Fibonacci, aumentando así su exposición a la luz y a los nutrientes.
+          Pero el aporte es recíproco puesto que se dan casos en los que la biología ayuda a comprender mejor las leyes físicas. El físico Richard Feynman, afirmó que la biología contribuyó con la formulación de la ley de conservación de la energía.</p>
+       </div>
+    </div>
+
+    <div class="row">
+        <div class="small-12 medium-12 large-12 columns">
+		<h5>1.1.2 Química</h5>
+		   <div class="row" style="margin-top: 2em;"></div><!--espacio-->
+		<p class="text-justify">En este caso, se trata de una ciencia cuyo objeto de estudio es la materia y su composición, por lo que resulta de gran utilidad para identificar y comprender las reacciones que ocurren entre las distintas sustancias que componen e intervienen en los distintos procesos que experimenta el organismo.
+        Su relevancia se reconoce con mayor claridad en la descripción de los procesos metabólicos como la respiración, la digestión o la fotosíntesis.</p>
+        </div>
+		</div>
+		 <div class="row">
+		<div class="small-6 medium-6 large-6 columns">
+		<img src="http://leavirtual.com.mx/actividades/archivos/img/imagen 3.png" width="300">
+		</div>
+		
+	</div>
+	
+	  <div class="row">
+	   <div class="small-6 medium-6 large-6 columns">
+	   		   <div class="row" style="margin-top: 2em;"></div><!--espacio-->
+	 <p class="text-justify"><h5>1.1.3 Matemáticas</h5>
+      La biología requiere de esta ciencia para procesar, analizar y reportar datos de investigaciones experimentales y para representar relaciones entre algunos fenómenos biológicos.
+      Por ejemplo, para determinar la prevalencia de una especie sobre otra en un espacio determinado, las reglas matemáticas resultan de utilidad, contar o medir el ritmo cardiaco, contar el tiempo de gestación de una mujer y su bebe etc.</p>
+	  	</div>
+		 <div class="small-6 medium-6 large-6 columns">
+		    <div class="row" style="margin-top: 6em;"></div><!--espacio-->
+	  <img src="http://leavirtual.com.mx/actividades/archivos/img/imagen 4.jpg" width="300">
+	</div>
+	</div>
+	
+
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
     
     <script src="js/vendor/jquery.js"></script>
     <script src="js/foundation.min.js"></script>
